unpackaged/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <description>Any questionnaires that are not ADAM Questionnaires</description>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>QUEST-{000000}</displayFormat>
        <label>Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>