unpackaged/main/default/objects/Questionnaire__c/fields/Q10__c.field-meta.xml
<CustomField>
    <fullName>Q10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q10</label>
    <type>Checkbox</type>
</CustomField>