unpackaged/main/default/objects/Questionnaire__c/fields/Q2__c.field-meta.xml
<CustomField>
    <fullName>Q2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q2</label>
    <type>Checkbox</type>
</CustomField>