unpackaged/main/default/objects/Questionnaire__c/fields/Questionnaire_Type__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Type__c</fullName>
    <label>Questionnaire Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optiman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>